tests/ui/frontmatter/frontmatter-invalid-multiple.rs
---cargo
//~^ ERROR expected item, found `-`
---

---buck
---

#![feature(frontmatter)]

fn main() {
}
